--- a/indexx.html
+++ b/indexx.html
@@ -104,14 +104,15 @@
 				</div>
 				
 				<div class="col-lg-6">
+				 	<form>	
 					<form action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-					  <div class="form-group">
+					  <div class="form-group"></div>
 					    <label for="mce-NAME">Your Name</label>
 						<input class="form-control" name="NAME" type="text" id="mce-NAME" placeholder="Enter Name" data-validate="validate(required, email)" required="required">
 					    <label for="mce-EMAIL">Email Address</label>
 						<input class="form-control" name="EMAIL" type="email" id="mce-EMAIL" placeholder="Enter Email" data-validate="validate(required, email)" required="required">
 					    <label for="mce-MMERGE3">Message</label>
-					    <textarea class="form-control" rows="3" name="MMERGE3" type="text" id="mce-MMERGE3"></textarea>
+					    <textarea class="form-control" rows="3" name="MMERGE3" id="mce-MMERGE3"></textarea>
 					  <br>
 					  <button type="submit" class="btn btn-default">Submit</button>
 					</form>
