--- a/indexx.html
+++ b/indexx.html
@@ -103,9 +103,8 @@
 						<a href="http://www.google.com/">Facebook</a></small></p>				
 				</div>
 				
-				<div class="col-lg-6">
-				 	<form>	
-					<action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+				<div class="col-lg-6"
+					<form action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
 					  <div class="form-group"></div>
 					    <label for="mce-NAME">Your Name</label>
 						<input class="form-control" name="NAME" type="text" id="mce-NAME" placeholder="Enter Name" data-validate="validate(required, email)" required="required">
