--- a/indexx.html
+++ b/indexx.html
@@ -103,7 +103,7 @@
 						<a href="http://www.google.com/">Facebook</a></small></p>				
 				</div>
 				
-				<div class="col-lg-6"
+				<div class="col-lg-6">
 					<form>
 					<form action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
 					  <div class="form-group"></div>
