--- a/thanks.html
+++ b/thanks.html
@@ -29,7 +29,7 @@
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-
+		
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
@@ -37,17 +37,17 @@
 			<i class="fa fa-times menu-close"></i>
 			<a href="http://weave.ws" class="smoothScroll">Home</a>
 			<a href="#about" class="smoothScroll">About</a>
-      <a href="https://www.facebook.com/pages/WEAVE/862096733860600"><i class="fa fa-facebook"></i></a>
-			<a href="https://twitter.com/weave_ws"><i class="fa fa-twitter"></i></a>
-			<a href="mailto:contact@weave.ws?Subject=Earth%20To%20Weave..."><i class="fa fa-envelope"></i></a>
+			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-twitter"></i></a>
+			<a href="#"><i class="fa fa-envelope"></i></a>
 		</div>
-
-		<!-- Menu button -->
+		
+		<!--Menu button-->
 		<div id="menuToggle"><i class="fa fa-bars"></i></div>
 	</nav>
 
-	<section id="home" name="home"></section>
-	<img src="assets/img/logo-floating.png" style="float: left;" />
+	<section id="home"></section>
+	<img src="assets/img/logo-floating.png" alt="WEAVE." style="float: left;" />
 	<div id="headerwrap">
 		<div class="container">
 			<div class="row">
@@ -59,26 +59,26 @@
 					<a href="https://www.facebook.com/sharer/sharer.php?u=http://weave.ws" class="btn btn-default" role="button">Facebook</a>
 					<a href="https://twitter.com/home?status=Awesome%20little%20project%20here%20-%20check%20it%20out%20and%20give%20the%20guys%20some%20love%20%40%20www.weave.ws" class="btn btn-default" role="button">Twitter</a>
 					<a href="https://plus.google.com/share?url=http://weave.ws" class="btn btn-default" role="button">Google+</a>
-					<a href="https://pinterest.com/pin/create/button/?url=www.weave.ws/assets/img/weave-pin.jpg&media=WEAVE.&description=Awesome%20little%20project%20here%20-%20check%20it%20out%20and%20give%20the%20guys%20some%20love%20%40%20www.weave.ws" class="btn btn-default" role="button">Pinterest</a>
+					<a href="https://plus.google.com/share?url=http://weave.ws" class="btn btn-default" role="button">Pinterest</a>
 					</div>
 				</div>
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/headerwrap -->
-
-	<section id="about" name="about"></section>
+			</div><!--/row-->
+		</div><!--/container-->
+	</div><!--/headerwrap-->
+	
+	<section id="about"></section>
 	<div id="aboutwrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 name">
-					<img class="img-responsive" src="assets/img/pic.png">
+					<img class="img-responsive" alt="WEAVE." src="assets/img/pic.png">
 					<p>WHATS IT ABOUT?</p>
 					<div class="name-label"></div>
-				</div><! --/col-lg-4-->
+				</div><!--/col-lg-4-->
 				<div class="col-lg-8 name-desc">
 					<h2>THE BEST MOMENTS<br/>ARE THE ONES WE FIND<br/>WHILE LOOKING FOR SOMETHING ELSE</h2>
 					<div class="name-zig"></div>
-
+					
 					<div class="col-md-6">
 						<p>Being loved, sad, determined and hopeful are just a few of the thousands of emotions that we all commonly share between us. Describing these important moments with words alone doesn’t usually live up to how we truly feel. Creating a small post that captures our thoughts, and connects it with its abstract surroundings; allows us to illustrate the real value and importance that words alone sadly can’t.</p>
 						<p>Weave is all about reflecting on special moments and exploring how they mesh and interact with the world.</p>
@@ -88,13 +88,13 @@
 						<p>Spending some time to explore through Weave gives us a chance to experience and feel that we normally forget. Weave leads us to states of mind, feelings and those little hidden inward passages that we’d otherwise rarely visit.</p>
 						<p>Because the best moments are always the ones we stumble upon while looking for something else.</p>
 					</div>
-
-				</div><! --/col-lg-8-->
-
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /aboutwrap -->
-
+					
+				</div><!--/col-lg-8-->
+		
+			</div><!--/row -->
+		</div><!--/container -->
+	</div><!--/aboutwrap -->
+	
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -103,7 +103,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/smoothscroll.js"></script>
 	<script src="assets/js/jquery.stellar.min.js"></script>
-	<script src="assets/js/fancybox/jquery.fancybox.js"></script>
+	<script src="assets/js/fancybox/jquery.fancybox.js"></script>    
 	<script src="assets/js/main.js"></script>
 		<script>
 		$(function(){
@@ -113,7 +113,7 @@
 			});
 		});
 		</script>
-
+		
 		<script type="text/javascript">
       $(function() {
         //    fancybox
