--- a/index.html
+++ b/index.html
@@ -40,33 +40,33 @@
 			<a href="#contact" class="smoothScroll">Contact</a>
 			<a href="https://www.facebook.com/pages/WEAVE/862096733860600"><i class="fa fa-facebook"></i></a>
 			<a href="https://twitter.com/weave_ws"><i class="fa fa-twitter"></i></a>
-			<a href="mailto:contact@weave.ws?Subject=Earth%20To%20Weave..."><i class="fa fa-envelope"></i></a>
+			<a href="mailto:contact@weave.ws?Subject=Hi%20There"><i class="fa fa-envelope"></i></a>
 		</div>
 
 		<!-- Menu button -->
 		<div id="menuToggle"><i class="fa fa-bars"></i></div>
 	</nav>
 
-	<section id="home" name="home"></section>
+	<section id="home" ></section>
 	<div id="headerwrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
 					<h1><a><img class="img-responsive" src="assets/img/logo.png" alt="WEAVE."></a></h1>
 				</div>
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/headerwrap -->
+			</div><!--/row-->
+		</div><!--/container-->
+	</div><!--/headerwrap-->
 
-	<section id="about" name="about"></section>
+	<section id="about"></section>
 	<div id="aboutwrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 name">
-					<img class="img-responsive" src="assets/img/pic.png">
+					<img class="img-responsive" src="assets/img/pic.png" alt="WEAVE.">
 					<p>WHATS IT ABOUT?</p>
 					<div class="name-label"></div>
-				</div><! --/col-lg-4-->
+				</div><!--/col-lg-4-->
 				<div class="col-lg-8 name-desc">
 					<h2>THE BEST MOMENTS<br/>ARE THE ONES WE FIND<br/>WHILE LOOKING FOR SOMETHING ELSE</h2>
 					<div class="name-zig"></div>
@@ -81,16 +81,16 @@
 						<p>Because the best moments are always the ones we stumble upon while looking for something else.</p>
 					</div>
 
-				</div><! --/col-lg-8-->
+				</div><!--/col-lg-8-->
 
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /aboutwrap -->
 
-	<! -- ABOUT SEPARATOR -->
+	<!--ABOUT SEPARATOR-->
 
-	<section id="contact" name="contact"></section>
-	<! -- CONTACT SEPARATOR -->
+	<section id="contact"></section>
+	<!--CONTACT SEPARATOR-->
 	<div class="sep contact" data-stellar-background-ratio="0.5"></div>
 
 	<div id="contactwrap">
@@ -99,28 +99,26 @@
 				<div class="col-lg-6">
 					<p>GET IN CONTACT</p>
 					<p>Dont worry, that warm tingling in your fingers is only your animalistic urge to give us a shout! Feel free to hop onto our mailing list or just drop us a message - We would love to hear from you.</p>
-					<p>
-						<small><a href="http://www.google.com/">Twitter</a><br/>
-						<a href="http://www.google.com/">Facebook</a>
-					</p>
+						<p><small><a href="http://www.google.com/">Twitter</a><br/>
+						<a href="http://www.google.com/">Facebook</a></small></p>
 				</div>
 
 				<div class="col-lg-6">
-					<form role="form" action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-					  <div class="form-group">
+					<form action="http://weave.us11.list-manage.com/subscribe/post?u=a728b31e70e478151dac586df&amp;id=adea7a56c1" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+					  <div class="form-group"></div>
 					    <label for="mce-NAME">Your Name</label>
 						<input class="form-control" name="NAME" type="text" id="mce-NAME" placeholder="Enter Name" data-validate="validate(required, email)" required="required">
 					    <label for="mce-EMAIL">Email Address</label>
 						<input class="form-control" name="EMAIL" type="email" id="mce-EMAIL" placeholder="Enter Email" data-validate="validate(required, email)" required="required">
 					    <label for="mce-MMERGE3">Message</label>
-					    <textarea class="form-control" rows="3" name="MMERGE3" type="text" id="mce-MMERGE3"></textarea>
-					  </div>
+					    <textarea class="form-control" rows="3" name="MMERGE3" id="mce-MMERGE3"></textarea>
+					  <br>
 					  <button type="submit" class="btn btn-default">Submit</button>
 					</form>
 				</div>
 
-			</div><! --/row -->
-		</div><!-- /container -->
+			</div><!--/row-->
+		</div><!--/container-->
 	</div>
 
     <!-- Bootstrap core JavaScript
