--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
 	<div id="headerwrap">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<h1><a><img class="img-responsive" src="assets/img/logo.png" alt="WEAVE."></a></h1>
-				</div>
+				<a><img width="350" src="assets/img/logo.png" alt="WEAVE."></a>
+				<h3>Come and experience Weave - the never-ending journey of being pleasantly surprised by the unexpected.</h3><br/>
+				<a href="assets/img/play.mp4">
+					<video width="416" autoplay loop >
+					<source src="assets/img/play.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+				</video>
+				</a>
 			</div><!--/row-->
 		</div><!--/container-->
 	</div><!--/headerwrap-->
