--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
 			<div class="row">
 				<a><img width="350" src="assets/img/logo.png" alt="WEAVE."></a>
 				<h3>Come and experience Weave - the never-ending journey of being pleasantly surprised by the unexpected.</h3><br/>
-				<a href="assets/img/play.mp4">
-					<video width="416" autoplay loop >
-					<source src="assets/img/play.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-				</video>
+				<a href="assets/img/intro.mp4" class="youtube-media">
+				<video class="video-preview" autoplay poster="assets/img/play.jpg" loop>
+					<source src="assets/img/play.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
 				</a>
 			</div><!--/row-->
 		</div><!--/container-->
@@ -67,7 +66,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 name">
-					<img class="img-responsive" src="assets/img/pic.png" alt="WEAVE.">
+					<img class="img-responsive" src="assets/img/pic.jpg" alt="WEAVE.">
 					<p>WHATS IT ABOUT?</p>
 					<div class="name-label"></div>
 				</div><!--/col-lg-4-->
@@ -76,13 +75,14 @@
 					<div class="name-zig"></div>
 
 					<div class="col-md-6">
-						<p>Being loved, sad, determined and hopeful are just a few of the thousands of emotions that we all commonly share between us. Describing these important moments with words alone doesn’t usually live up to how we truly feel. Creating a small post that captures our thoughts, and connects it with its abstract surroundings; allows us to illustrate the real value and importance that words alone sadly can’t.</p>
-						<p>Weave is all about reflecting on special moments and exploring how they mesh and interact with the world.</p>
+						<p>Think of Weave as an interactive tapestry of social history, which is made up of high-quality “threads”.</p>
+						<p>Each thread, is a post containing your unique message, which is coloured, based on its emotional quality. It empowers you to share meaningful moments and messages with the whole world.</p>
+						<p>See how your thread is woven together with a hundred others – and those hundred, to millions... Weave expands on your social network and allows you to actually see how the fabric of it is interconnected from top to bottom.</p>
 					</div>
 					<div class="col-md-6">
-						<p>It’s not designed to be searched or filed away, but to be randomly explored like stumbling upon an obscure and insightful message with a friend.</p>
-						<p>Spending some time to explore through Weave gives us a chance to experience and feel that we normally forget. Weave leads us to states of mind, feelings and those little hidden inward passages that we’d otherwise rarely visit.</p>
-						<p>Because the best moments are always the ones we stumble upon while looking for something else.</p>
+						<p>No keyword searching, no typing – just effortlessly explore your way through to uncover unforgettable emotional insights that you would have never found before.</p>
+						<p>Weave allows you to unexpectedly find and deeply connect with content that has a purpose. Weave isn't about sharing cat pictures; our ultimate goal is to help you explore and share meaningful moments through your social network.</p>
+						<p>Experience Weave...the never-ending journey of being pleasantly surprised by the unexpected.</p>
 					</div>
 
 				</div><!--/col-lg-8-->
@@ -103,8 +103,8 @@
 				<div class="col-lg-6">
 					<p>GET IN CONTACT</p>
 					<p>Dont worry, that warm tingling in your fingers is only your animalistic urge to give us a shout! Feel free to hop onto our mailing list or just drop us a message - We would love to hear from you.</p>
-						<p><small><a href="http://www.google.com/">Twitter</a><br/>
-						<a href="http://www.google.com/">Facebook</a></small></p>
+						<p><small><a href="https://twitter.com/weave_ws">Twitter</a><br/>
+						<a href="https://www.facebook.com/pages/WEAVE/862096733860600">Facebook</a></small></p>
 				</div>
 
 				<div class="col-lg-6">
