--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="row">
 				<a><img width="350" src="assets/img/logo.png" alt="WEAVE."></a>
 				<h3>Come and experience Weave - the never-ending journey of being pleasantly surprised by the unexpected.</h3><br/>
-				<a href="assets/img/intro.mp4" class="youtube-media">
+				<a href="https://player.vimeo.com/video/141699064?autoplay=1&title=0&byline=0&portrait=0" class="youtube-media">
 				<video class="video-preview" autoplay poster="assets/img/play.jpg" loop>
 					<source src="assets/img/play.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'></video>
 				</a>
